[gd_scene load_steps=12 format=3 uid="uid://mxamvg3qqrgk"]

[ext_resource type="Script" path="res://src/player.gd" id="2_arj1u"]
[ext_resource type="PackedScene" uid="uid://cxh3byjkkk5m8" path="res://scenes/grass_platform.tscn" id="2_grsgv"]
[ext_resource type="PackedScene" uid="uid://dd3iysk3m46cu" path="res://scenes/portal.tscn" id="3_40yfg"]
[ext_resource type="PackedScene" uid="uid://64iax58pw6yt" path="res://scenes/rock_platform.tscn" id="3_nlklq"]
[ext_resource type="Script" path="res://src/fps_counter.gd" id="4_rum52"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_h6jsf"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_h76pc"]
sky_material = SubResource("ProceduralSkyMaterial_h6jsf")

[sub_resource type="Environment" id="Environment_5pb0a"]
background_mode = 2
sky = SubResource("Sky_h76pc")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_rqnto"]
size = Vector3(1, 2, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ql34n"]

[sub_resource type="LabelSettings" id="LabelSettings_ya86k"]
font_size = 24

[node name="world" type="Node3D"]

[node name="sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433012, 0, 0, 0)
light_energy = 0.5
shadow_enabled = true

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5pb0a")

[node name="player" type="CharacterBody3D" parent="."]
script = ExtResource("2_arj1u")

[node name="player_hitbox" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_rqnto")

[node name="player_mesh" type="MeshInstance3D" parent="player/player_hitbox"]
mesh = SubResource("CapsuleMesh_ql34n")
skeleton = NodePath("../..")

[node name="player_head" type="Node3D" parent="player/player_hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="player_camera" type="Camera3D" parent="player/player_hitbox/player_head"]

[node name="grass_platform" parent="." instance=ExtResource("2_grsgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="grass_portal" parent="grass_platform" node_paths=PackedStringArray("PLAYER_CAMERA", "LINKED_PORTAL") instance=ExtResource("3_40yfg")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -4, 0, 3)
PLAYER_CAMERA = NodePath("../../player/player_hitbox/player_head/player_camera")
LINKED_PORTAL = NodePath("../../rock_platform/rock_portal")

[node name="rock_platform" parent="." instance=ExtResource("3_nlklq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, 0)

[node name="rock_portal" parent="rock_platform" node_paths=PackedStringArray("PLAYER_CAMERA", "LINKED_PORTAL") instance=ExtResource("3_40yfg")]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -4, 0, -2)
PLAYER_CAMERA = NodePath("../../player/player_hitbox/player_head/player_camera")
LINKED_PORTAL = NodePath("../../grass_platform/grass_portal")

[node name="fps_counter" type="Label" parent="."]
offset_right = 200.0
offset_bottom = 100.0
label_settings = SubResource("LabelSettings_ya86k")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_rum52")
